# pro-pick

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  README.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f7_add_market_predictions.py  b2c3d4e5f6a8_add_market_odds.py  d771cf63af08_initial_schema.py  e4a91c0d7b2e_add_odds_previous_columns.py  f8b2c3d4e5f6_add_push_notifications.py
backend/app/: main.py
backend/app/api/: __init__.py  analytics.py  dashboard.py  health.py  matches.py  notifications.py  predictions.py  value_bets.py
backend/app/core/: cache.py  config.py  database.py  errors.py  rate_limit.py
backend/app/ml/: backtest.py  baseline.py  binary_calibration.py  binary_model.py  calibration.py  evaluation.py  features.py  market_features.py  market_labels.py  market_train.py  pretrained_model.pkl  storage.py  train.py  xgboost_model.py
backend/app/models/: __init__.py  competition.py  device_push_token.py  market_odds.py  market_prediction.py  match.py  match_notification_preference.py  match_state_snapshot.py  odds.py  prediction.py  sent_notification.py  team.py  value_bet.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: common.py  notifications.py
backend/app/scripts/: backfill_finished_predictions.py  backfill_market_predictions.py  backfill_odds.py  backfill_team_history.py  import_historical.py  seed_demo.py  (+2 more)
backend/scripts/: release.sh
backend/tests/: test_migrations.py  test_value_bets.py
(+243 files in other folders)
